test/error/TypeClassInc.ci
public class Test
{
	public static bool Run()
	{
		Test++ p; //ERROR: Invalid type
		return true;
	}
}
